welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: ';' expected but '(' found.
	new T:Array[Int] (nums.length);
                         ^