welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	new T:Array[Int] (nums.length);
	for (i <- T.length-1) {
		T(i)=0;
	}
	for (i <- 0 to nums.length-1) {
		T(i)=T(i)+1;
	}
	for (i <- 0 to nums.length-1) {
		if (T(i)>=3) {
			return true;
		}
	}
	return false;
}
